Update 004.Longest Palindromic Substring.md

--- a/004.Longest Palindromic Substring.md
+++ b/004.Longest Palindromic Substring.md
@@ -2,3 +2,67 @@
 #Manacher Algorithm  
 
 http://www.cnblogs.com/biyeymyhjob/archive/2012/10/04/2711527.html
+
+class Solution(object):
+    def longestPalindrome(self, s):
+        """
+        :type s: str
+        :rtype: str
+        """
+        
+        # odd palindromic and even palindromic to odd palindromic
+        str = '#'+'#'.join(s)+'#'               #字符串处理，用特殊字符隔离字符串，方便处理偶数子串  
+        lens = len(str)  
+        
+        # support list to record expand length from center of palindromic at index i
+        # 数组 P[i] 来记录以字符S[i]为中心的最长回文子串向左/右扩张的长度（包括S[i]）
+        P = [0] * lens                                          #辅助列表：f[i]表示i作中心的最长回文子串的长度  
+        max_pi = 0
+        max_id = 0
+        
+        # id is the index of the center of the recorded longest palindromic substring
+        id = 0  
+        # mx is the index of the RIGHT border of the recorded longest palindromic substring
+        mx = id + P[id]
+        
+        # mx     j     id     i    mx
+        
+        for i in range(lens):                           #遍历字符串  
+            # i is within border check is simplified
+            if mx > i:
+                # for fast calculation purpose
+                # count is actually P[i]
+                # j = 2*id-i  according to previous calculation for 2*id-i  
+                # calculation for i is simplified
+                count = min(mx-i, P[2*id-i])    #这里为了方便后续计算使用count，其表示当前字符到其影响范围的右边界的距离
+                # the minimun is length don't need checking not starting from 1
+            else:
+                # in other case not yet checked set count to 1
+                count = 1  
+            
+            # i as center check i-count and i+count
+            # border checking
+            while i-count>=0 and i+count<lens and str[i-count]==str[i+count]:       
+                count = count + 1
+                
+            # after while count is finalized for i
+            P[i] = count
+            
+            # for fast calculation purpose
+            # next calculation is simplified due to previous border calculation
+            if (i + P[i]) > mx:        
+                # palindromic border is expanded
+                # update id and mx
+                mx = i + P[i]
+                id = i
+            
+            # record the longest length
+            max_pi = max(max_pi, P[i])
+            # if new longest palindromic found, record longest center
+            if P[i] == max_pi:
+                max_id = i
+                
+        # after run id and P[id] is all you need to have
+        return str[max_id-(max_pi-1):max_id+(max_pi-1)].replace('#','')
+        
+        
