Update 007.Regular Expression Matching.md

--- a/007.Regular Expression Matching.md
+++ b/007.Regular Expression Matching.md
@@ -68,5 +68,62 @@ class Solution(object):
         
         
         
-        # you can use dynamic programming here
+# dynamic programming
+
+class Solution(object):
+    
+    # obj for the class
+    hash = None
+    
+    def isMatch(self, s, p):
+        """
+        :type s: str
+        :type p: str
+        :rtype: bool
+        """
         
+        # dynamic programming is used here
+        # initialize a list for all possible matches
+        #[[False,False,False...],[False,False,False,False...],[],[],[]....]
+        # list of list the inner first list means s matches first character of p
+        # the length of str include the ending $
+        
+        # pulse 1 avoids null
+        dp = [[False for i in range(0,len(p) + 1)] for j in range(0, len(s) + 1)]
+        
+        # True for '' '' matching
+        dp[0][0] = True
+        
+        # assgin value to the first case
+        # if s is '' 0 the result depneds on p
+        for i in range(1, len(p) + 1):
+            # if p[i-1] is * then p[i-2] can match
+            if (p[i - 1] == '*'):
+                # give status of i-2 to i the previous status to later status i-1+1
+                # it doesn't matter the first few calculations inaccurate
+                # for case like this it is and
+                dp[0][i] = dp[0][i - 2]
+           
+        # using the loop iterate through the following cases dynamic programming        
+        for i in range(1, len(s) + 1):
+            for j in range(1, len(p) + 1):
+                
+                # in case previous is *
+                if p[j - 1] == '*':
+                    # this is at location i in s match every character
+                    dp[i][j] = dp[i][j - 2]
+                    
+                    # in case previous two character is . matchs all
+                    if s[i - 1] == p[j - 2] or p[j - 2] == '.':
+                        # or here result depends on later following
+                        # the .* already matches all
+                        dp[i][j] |= dp[i-1][j]
+                else:
+                    # need to check the previous one character
+                    if s[i - 1] == p[j - 1] or p[j - 1] == '.':
+                        # here result depends on the previous one
+                        # it is and here
+                        dp[i][j] = dp[i - 1][j - 1]
+    
+        # what is returned has many layers the last one at len(s) len(p)
+        return dp[len(s)][len(p)] 
